tests/Fase2-Semantic/error/t17-declaring_a_not_basic_type_attribute_field.ctds
class main {
	integer x;
	nobasic e;


	integer add(){
		x = x+1;
		return x;
	}

	void main(){
		x=0;
		add();
	}
	
}
